2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program-private.h
	* src/hildon-program.c
	* src/hildon-program.h
	(_hildon_program_remove_from_stack, _hildon_program_add_to_stack)
	(hildon_program_peek_window_stack)
	(hildon_program_pop_window_stack)
	(hildon_program_go_to_root_window): HildonProgram now has a
	separate list for stackable windows. Functions are provided to
	manage that list with a stack-like API.

	* src/hildon-stackable-window.c: Stackable window management is
	now much simpler with the new HildonProgram API. Windows no
	longer need to be manually added to the program, they're
	automatically pushed to the top of the stack when shown.

	* examples/hildon-stackable-window-example.c: Updated example to
	reflect the API changes.

2008-08-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: Comment out unimplemented
	hildon_touch_selector_insert_column() to avoid a compile warning.

2008-08-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (hildon_touch_selector_class_init),
	(hildon_touch_selector_new), (hildon_touch_selector_remove_column),
	(hildon_touch_selector_set_column_selection_mode),
	(_hildon_touch_selector_set_model),
	(hildon_touch_selector_set_model):

	Complete review of HildonTouchSelector documentation.

2008-08-08  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* src/Makefile.am
	* src/hildon.h
	* src/hildon-gtk.h
	* src/hildon-gtk.c: Convenience functions for standard Gtk
	widgets, used to easily perform frequent operations.

	* src/hildon-button-helpers.h
	* src/hildon-button-helpers.c: Removed in favour of hildon-gtk.[ch]

	* src/hildon-helper.h
	* src/hildon-helper.c (hildon_helper_set_theme_size): Renamed to
	hildon_gtk_widget_set_theme_size and moved to hildon-gtk.h

	* src/hildon-button.h
	* src/hildon-button.c: Use the new hildon-gtk.[ch] functions.

2008-08-07  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_init)